# spmem

./: .dockerignore  .gitignore  BATCH_PROCESSING.md  Dockerfile  README.md  batch_colmap_demo.py  batch_processing.py  colmap_demo.py  demo_batch_processing.py  instructions.txt  main.py  pyproject.toml  registration.py  streaming_vggt.py  tensors_from_mp4s.py  tensors_from_mp4s_pyav.py  test_batch_processing.py  test_streaming_vggt.py  test_vae_batch.py  vae_data_pipeline.py  vae_data_pipeline_batch.py  vae_data_pipeline_mmap.py  vae_data_pipeline_single.py  vae_pipeline.py
.devcontainer/: devcontainer.json
configs/: sky.yaml  sky2.yaml  sky_dry_run_vae_mmap.yaml
scripts/: 1x_data.sh  dry_run_vae_mmap.sh  run_tensorification_pipeline.sh
