[project]
name = "vggt-streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "lightglue",
    "pyceres==2.3",
    "pycolmap==3.10.0",
    "scikit-learn>=1.3.0",
    "skypilot-nightly[server]==1.0.0.dev20250618",
    "torch==2.5.1",
    "torchvision",
    "trimesh>=4.7.0",
    "tyro>=0.9.26",
    "vggt",
    "viser>=1.0.0",
]

[tool.uv.sources]
vggt = { git = "https://github.com/lapp0/vggt.git" }  # fixed graph breaks in compile
lightglue = { git = "https://github.com/jytime/LightGlue.git" }

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu124"]